changement des LinkedList en ArrayList